objects/Project_Resource__c.object
<CustomObject>
    <label>Project Resource</label>
    <nameField>
        <displayFormat>PRS-{00000000}</displayFormat>
        <label>Project Resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Resource__r.Role__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Resources</relationshipLabel>
        <relationshipName>Project_Resource_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <inlineHelpText>8 character Nickname for this Budget.</inlineHelpText>
        <label>Nickname</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Project Resources</relationshipLabel>
        <relationshipName>Project_Resource_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_hrs__c</fullName>
        <formula>Default_hrs_weekday__c *  Duration_weekdays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_hrs__c</fullName>
        <formula>Planned_hrs_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_weekdays__c</fullName>
        <formula>Project__r.Duration_weekdays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (weekdays)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Specifics__c</fullName>
        <label>Project Specifics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_hrs_Rollup__c</fullName>
        <label>Planned (hrs) Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_FTE_weekday__c</fullName>
        <label>Default (FTE/weekday)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_hrs_weekday__c</fullName>
        <formula>Default_FTE_weekday__c * 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default (hrs/weekday)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_FTE_weekday__c</fullName>
        <formula>Planned_hrs_weekday__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned (FTE/weekday)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_hrs_weekday__c</fullName>
        <formula>Planned_hrs__c /  Duration_weekdays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned (hrs/weekday)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Resource__c</fullName>
        <formula>$User.Id ==  Resource__r.User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Resource</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Planned_must_be_between_0_and_100</fullName>
        <active>true</active>
        <errorConditionFormula>!Bypass_Validation__c &amp;&amp; (
     Default_FTE_weekday__c &lt; 0 || Default_FTE_weekday__c &gt; 1
)</errorConditionFormula>
        <errorMessage>Planned must be between 0% and 100%.</errorMessage>
    </validationRules>
</CustomObject>